# poetry-jupyter-plugin

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
poetry_jupyter/: plugin.py
poetry_jupyter_plugin/: plugin.py
