[tool.poetry]
name = "poetry-jupyter-plugin"
version = "0.1.1"
description = "Poetry plugin to manage Jupyter kernels"
authors = ["Patrick Kage <patrick.r.kage@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_jupyter_plugin"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.3.2"
jupyter-client = "^7.4.8"
asset = "^0.6.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
jupyter-command = "poetry_jupyter_plugin.plugin:JupyterKernelPlugin"
