[tool.poetry]
name = "poetry-jupyter-plugin"
version = "0.1.4"
description = "Poetry plugin to manage Jupyter kernels"
authors = ["Patrick Kage <patrick.r.kage@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pkage/poetry-jupyter-plugin"
repository = "https://github.com/pkage/poetry-jupyter-plugin"
packages = [{include = "poetry_jupyter_plugin"}]
keywords = ["poetry", "poetry-plugin", "plugin", "jupyter", "jupyter-kernel"]
classifiers = [
    "Framework :: Jupyter",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^2.0.0"
jupyter-client = "^7.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
jupyter-command = "poetry_jupyter_plugin.plugin:JupyterKernelPlugin"
